--- a/openhpi/trunk/README
+++ b/openhpi/trunk/README
@@ -2,7 +2,12 @@
 This is an implementation of SAForum's Hardware Platform Interface
 specification.
 
-You should be able to run configure, then make (or make rpm)
+You should be able to run 
+
+./bootstrap 
+./configure
+
+then make (or make rpm)
 and then make install (or install from the rpm).
 
 It will generate the library you need and a sample application 
