Updating files to use SaHpi.h

--- a/openhpi/trunk/README
+++ b/openhpi/trunk/README
@@ -1,6 +1,6 @@
 
 This is an implementation of SAForum's Hardware Platform Interface
-specification.
+specification.  The header file was obtained from www.saforum.org/specification/download.
 
 You should be able to run 
 
