--- a/openhpi/trunk/README
+++ b/openhpi/trunk/README
@@ -53,11 +53,11 @@ If you wish to disable a plugin, any flags you pass to configure
 will be passed to the configure program.
 ("./configure --help" for more info on the options)
 
-i.e. ./configure --disable-dummy will disable the dummy plugin
+i.e. ./configure --disable-simulator will disable the simulator plugin
 
 Note that for a production-type installation you will want to pass
 the following options at the least:
-./configure --prefix=/usr --sysconfdir=/etc --with-varlib=/var/lib/openhpi
+./configure --prefix=/usr --sysconfdir=/etc --with-varpath=/var/lib/openhpi
 
 then 
 	make (or make rpm, but you will need to be root on some distros.)
@@ -72,12 +72,9 @@ This will be in ${sysconfdir}/openhpi/openhpi.conf, where $sysconfdir is
 ${prefix}/etc by default (and ${prefix} is /usr/local by default) unless
 you set $sysconfdir when you ran ./configure as shown above.
 
-FOR CVS EXTRACTS
+FOR SUBVERSION EXTRACTS
 
-cvs -d:pserver:anonymous@cvs.sourceforge.net:/cvsroot/openhpi login
-(When prompted for a password, just hit the Enter key.)
-
-cvs -z3 -d:pserver:anonymous@cvs.sourceforge.net:/cvsroot/openhpi co -P openhpi
+svn co https://svn.sourceforge.net/svnroot/openhpi/openhpi/trunk openhpi
 
 First time after extracting the code:
 run ./bootstrap
