--- a/openhpi/trunk/README
+++ b/openhpi/trunk/README
@@ -32,7 +32,7 @@ ipmi plugin
   OpenIPMI >= 1.4.16 (http://openipmi.sf.net)
 
 sysfs plugin
-  libsysfs = 0.3
+  libsysfs =< 1.3
 
 snmp_bc plugin
   net-snmp >= 5.07
