Fix for #3011456 Domain Support for Clients Fix for #3014317 hpisettime input parameter check Fix for #3014897 DIMI and FUMI options do not work hpitop Additional fixes: - hpiel.c correct copyright statement added - usage texts wherever some existing options where missing in the usage text. - man pages, where existing options were missing. - in section "see also" a reference to all other clients added. - added a check for some other options requiring a mandatory value.   Now in these case, the usage text will be printed.   See e.g. hpievents -t  or hpifan -s. - In hpireset added a test option to allow test without reset being issued.   That option -q is not documented in usage, and will exit the program just   before reset would be issued.

--- a/openhpi/trunk/docs/man/hpiel.pod.1
+++ b/openhpi/trunk/docs/man/hpiel.pod.1
@@ -4,17 +4,23 @@ hpiel - An openhpi sample application that displays HPI event log entries.
 
 =head1 SYNOPSIS 
 
-hpiel [ -d -e -c -p -r -x -v -h ]
+hpiel [-D domain] [-d] [-e entitypath] [-c -p -r -x -v -h ]
+
+hpiel [--Domain="domainid"] [--del] [-entitypath="entitypath"] [--clear --resource --rdr --xml --verbose --help]
 
 =head1 DESCRIPTION
 
 hpiel searches the RPT (Resource Present Table) for resources with SAHPI_CAPABILITY_EVENT_LOG and displays event log entries for resources found.
 
+If no domain is selected, hpiel uses a session with the default domain. The selected domain id must be configured via the openhpidclient.conf file specified in the environment.
+
+
 =head1 OPTIONS
 
 =over 2
 
- --del, -d				display domain event log entries 
+ --Domain="<arg>", -D "<arg>"           select domain id
+ --del, -d	display domain event log entries 
  --entitypath="<arg>", -e "<arg>"	display resource event log entries
                                         (e.g. -e "{SYSTEM_CHASSIS,2}{SBC_BLADE,5}")
  --clear, -c	clear log before reading event log entries
@@ -59,9 +65,13 @@ SaErrorT SAHPI_API saHpiEventLogClear (
 
 =head1 SEE ALSO
 
+hpialarms, hpievents, hpifan, hpiinv, hpionIBMblade, hpipower, hpireset, hpisensor, hpisettime, hpithres, hpitop, hpitree, hpiwdt
+
+
 =head1 AUTHORS
 
 Authors of this man page:
 
  Peter D Phan (pdphan@users.sourceforge.net)
+ Ulrich Kleber (ulikleber@users.sourceforge.net)
 
