--- a/openhpi/trunk/docs/man/hpialarms.pod.1
+++ b/openhpi/trunk/docs/man/hpialarms.pod.1
@@ -4,35 +4,38 @@ hpialarms - A openhpi sample application that shows "Alarm Control" management i
 
 =head1 SYNOPSIS 
 
-hpialarms [-a -b -c -i -m -n -p -o -x]
+hpialarms [-D -a -b -c -i -m -n -p -o -x]
 
 =head1 DESCRIPTION
 
 hpialarms walks the RPT (Resource Present Table) for resouces that have 
 "Alarm Control" management instruments (SAHPI_CTRL_LED).
 
+If no domain is selected, hpialarms uses a session with the default domain. The selected domain id must be configured via the openhpidclient.conf file specified in the environment.
+
 
 =head1 OPTIONS
 
 =over 2
 
- -c1  sets Critical Alarm on
- -c0  sets Critical Alarm off
- -m1  sets Major Alarm on
- -m0  sets Major Alarm off
- -n1  sets Minor Alarm on
- -n0  sets Minor Alarm off
- -p1  sets Power Alarm on
- -p0  sets Power Alarm off
- -i5  sets Chassis ID on for 5 sec
- -i0  sets Chassis ID off
- -a1  sets Disk A fault on
- -a0  sets Disk A fault off
- -b1  sets Disk B fault on
- -b0  sets Disk B fault off
- -d[byte] sets raw Alarm byte
- -o   sets all Alarms off
- -x   show eXtra debug messages
+ -D domain id  Select domain id
+ -c1           sets Critical Alarm on
+ -c0           sets Critical Alarm off
+ -m1           sets Major Alarm on
+ -m0           sets Major Alarm off
+ -n1           sets Minor Alarm on
+ -n0           sets Minor Alarm off
+ -p1           sets Power Alarm on
+ -p0           sets Power Alarm off
+ -i5           sets Chassis ID on for 5 sec
+ -i0           sets Chassis ID off
+ -a1           sets Disk A fault on
+ -a0           sets Disk A fault off
+ -b1           sets Disk B fault on
+ -b0           sets Disk B fault off
+ -d[byte]      sets raw Alarm byte
+ -o            sets all Alarms off
+ -x            show eXtra debug messages
 
 =back
 
@@ -54,9 +57,12 @@ hpialarms walks the RPT (Resource Present Table) for resouces that have
 
 =head1 SEE ALSO
 
+hpiel, hpievents, hpifan, hpiinv, hpionIBMblade, hpipower, hpireset, hpisensor, hpisettime, hpithres, hpitop, hpitree, hpiwdt
+
 =head1 AUTHORS
 
 Authors of this man page:
 
  Peter D Phan (pdphan@users.sourceforge.net)
+ Ulrich Kleber (ulikleber@users.sourceforge.net)
 
