--- a/openhpi/trunk/docs/man/hpievents.pod.1
+++ b/openhpi/trunk/docs/man/hpievents.pod.1
@@ -4,17 +4,21 @@ hpievents - An openhpi sample application that polls for events.
 
 =head1 SYNOPSIS 
 
-hpievents [ -t -d -x ]
+hpievents [ -D <value> ][ -t <value> ] [ -d -x ]
 
 =head1 DESCRIPTION
 
 hpievents polls for events in an opened HPI session.  User can specify wait time for the event. User can also select the order between hpi resource (resource event) discovery and hpi event subscription.
 
+If no domain is selected, hpievents polls for events in the default domain. The selected domain id must be configured via the openhpidclient.conf file specified in the environment.
+
+
 =head1 OPTIONS
 
 =over 2
  
- where:  -t <value> - wait <value> seconds for event;
+ where:  -D <value> - select domain id
+         -t <value> - wait <value> seconds for event;
          -t SAHPI_TIMEOUT_BLOCK or BLOCK - infinite wait
          -d - call saHpiDiscover() after saHpiSubscribe()
          -x - displays eXtra debug messages
@@ -46,10 +50,11 @@ SaErrorT SAHPI_API saHpiEventGet (
 
 =head1 SEE ALSO
 
+hpialarms, hpiel, hpifan, hpiinv, hpionIBMblade, hpipower, hpireset, hpisensor, hpisettime, hpithres, hpitop, hpitree, hpiwdt
  
 =head1 AUTHORS
 
 Authors of this man page:
 
  Peter D Phan (pdphan@users.sourceforge.net)
-
+ Ulrich Kleber (ulikleber@users.sourceforge.net)
