--- a/openhpi/trunk/docs/man/hpiinv.pod.1
+++ b/openhpi/trunk/docs/man/hpiinv.pod.1
@@ -4,19 +4,23 @@ hpiinv - An openhpi sample application that shows resources' inventory records.
 
 =head1 SYNOPSIS 
 
-hpiinv [-x] [-a asset_tag]
+hpiinv [-D domain] [-vxz] [-a asset_tag]
 
 =head1 DESCRIPTION
 
 hpiinv walks the RPT (Resource Present Table) looking for resources that have Inventory Capability.  It displays all inventory records found.  
 
+If no domain is selected, hpiinv uses a session with the default domain. The selected domain id must be configured via the openhpidclient.conf file specified in the environment.
+
 =head1 OPTIONS
 
 =over 2
 
- -a  Sets the asset tag
- -x  Display debug messages
- -z  Display extra debug messages
+ -D domainid  Select the domain
+ -a tag       Sets the asset tag
+ -v           Use verbose output mode
+ -x           Display debug messages
+ -z           Display extra debug messages
 
 =back
 
@@ -33,9 +37,12 @@ LENGTH_BAD
 
 =head1 SEE ALSO
 
+hpialarms, hpiel, hpievents, hpifan, hpionIBMblade, hpipower, hpireset, hpisensor, hpisettime, hpithres, hpitop, hpitree, hpiwdt
+
 =head1 AUTHORS
 
 Authors of this man page:
 
  Peter D Phan (pdphan@users.sourceforge.net)
+ Ulrich Kleber (ulikleber@users.sourceforge.net)
 
