--- a/openhpi/trunk/docs/man/hpisettime.pod.1
+++ b/openhpi/trunk/docs/man/hpisettime.pod.1
@@ -4,27 +4,33 @@ hpisettime - This sample openhpi application excercises Event Log clock APIs.
 
 =head1 SYNOPSIS 
 
-hpisettime -d mm/dd/yyyy -t HH:MM:SS [-x]
+hpisettime [-D domainid] -d mm/dd/yyyy -t HH:MM:SS [-x]
 
 =head1 DESCRIPTION
 
 hpisettime sets new date and time for the Event Log clock.
 
+If no domain is selected, hpisettime uses a session with the default domain. The selected domain id must be configured via the openhpidclient.conf file specified in the environment.
+
 =head1 OPTIONS
 
 =over 2
 
- -d date in mm/dd/yyyy format
- -t time of day in 24-hr format
- -x displays eXtra debug messages
+ -D domainid     select domain
+ -d date         in mm/dd/yyyy format
+ -t time of day  in 24-hr format
+ -x              displays eXtra debug messages
 
 =back
 
 =head1 SEE ALSO
+
+hpialarms, hpiel, hpievents, hpifan, hpiinv, hpionIBMblade, hpipower, hpireset, hpisensor, hpithres, hpitop, hpitree, hpiwdt
 
 =head1 AUTHORS
 
 Authors of this man page:
 
  Peter D Phan (pdphan@users.sourceforge.net)
+ Ulrich Kleber (ulikleber@users.sourceforge.net)
 
