Fix for Feature Request 3032998: New client hpidomain for domain information Man entries for hpidomain and hpigensimdata Fix for Bug 3032617: openhpi.conf.example uncomplete Additional log output for ipmidirect at end of initial discovery

--- a/openhpi/trunk/docs/man/hpialarms.pod.1
+++ b/openhpi/trunk/docs/man/hpialarms.pod.1
@@ -57,7 +57,12 @@ If no domain is selected, hpialarms uses a session with the default domain. The 
 
 =head1 SEE ALSO
 
-hpiel, hpievents, hpifan, hpiinv, hpionIBMblade, hpipower, hpireset, hpisensor, hpisettime, hpithres, hpitop, hpitree, hpiwdt
+         hpi_shell
+         hpidomain      hpigensimdata  hpireset       hpitop
+         hpiel          hpiinv         hpisensor      hpitree
+         hpievents      hpionIBMblade  hpisettime     hpiwdt
+         hpifan         hpipower       hpithres
+
 
 =head1 AUTHORS
 
