--- a/openhpi/trunk/docs/man/hpiel.pod.1
+++ b/openhpi/trunk/docs/man/hpiel.pod.1
@@ -65,7 +65,11 @@ SaErrorT SAHPI_API saHpiEventLogClear (
 
 =head1 SEE ALSO
 
-hpialarms, hpievents, hpifan, hpiinv, hpionIBMblade, hpipower, hpireset, hpisensor, hpisettime, hpithres, hpitop, hpitree, hpiwdt
+         hpi_shell
+         hpialarms      hpigensimdata  hpireset       hpitop
+         hpidomain      hpiinv         hpisensor      hpitree
+         hpievents      hpionIBMblade  hpisettime     hpiwdt
+         hpifan         hpipower       hpithres
 
 
 =head1 AUTHORS
