--- a/openhpi/trunk/docs/man/hpievents.pod.1
+++ b/openhpi/trunk/docs/man/hpievents.pod.1
@@ -50,7 +50,12 @@ SaErrorT SAHPI_API saHpiEventGet (
 
 =head1 SEE ALSO
 
-hpialarms, hpiel, hpifan, hpiinv, hpionIBMblade, hpipower, hpireset, hpisensor, hpisettime, hpithres, hpitop, hpitree, hpiwdt
+         hpi_shell
+         hpialarms      hpigensimdata  hpireset       hpitop
+         hpidomain      hpiinv         hpisensor      hpitree
+         hpiel          hpionIBMblade  hpisettime     hpiwdt
+         hpifan         hpipower       hpithres
+
  
 =head1 AUTHORS
 
