--- a/openhpi/trunk/docs/man/hpifan.pod.1
+++ b/openhpi/trunk/docs/man/hpifan.pod.1
@@ -25,7 +25,12 @@ If no domain is selected, hpifan uses a session to the default domain. The selec
 
 =head1 SEE ALSO
 
-hpialarms, hpiel, hpievents, hpiinv, hpionIBMblade, hpipower, hpireset, hpisensor, hpisettime, hpithres, hpitop, hpitree, hpiwdt
+         hpi_shell
+         hpialarms      hpigensimdata  hpireset       hpitop
+         hpidomain      hpiinv         hpisensor      hpitree
+         hpiel          hpionIBMblade  hpisettime     hpiwdt
+         hpievents      hpipower       hpithres
+
  
 =head1 AUTHORS
 
