--- a/openhpi/trunk/docs/man/hpiinv.pod.1
+++ b/openhpi/trunk/docs/man/hpiinv.pod.1
@@ -37,7 +37,12 @@ LENGTH_BAD
 
 =head1 SEE ALSO
 
-hpialarms, hpiel, hpievents, hpifan, hpionIBMblade, hpipower, hpireset, hpisensor, hpisettime, hpithres, hpitop, hpitree, hpiwdt
+         hpi_shell
+         hpialarms      hpifan         hpireset       hpitop
+         hpidomain      hpigensimdata  hpisensor      hpitree
+         hpiel          hpionIBMblade  hpisettime     hpiwdt
+         hpievents      hpipower       hpithres
+
 
 =head1 AUTHORS
 
