--- a/openhpi/trunk/docs/man/hpionIBMblade.pod.1
+++ b/openhpi/trunk/docs/man/hpionIBMblade.pod.1
@@ -50,6 +50,12 @@ Management Controller (BMC)
 
 =head1 SEE ALSO
 
+         hpi_shell
+         hpialarms      hpifan         hpireset       hpitop
+         hpidomain      hpigensimdata  hpisensor      hpitree
+         hpiel          hpiiinv        hpisettime     hpiwdt
+         hpievents      hpipower       hpithres
+
 
 =head1 AUTHORS
 
