--- a/openhpi/trunk/docs/man/hpireset.pod.1
+++ b/openhpi/trunk/docs/man/hpireset.pod.1
@@ -31,8 +31,12 @@ If no domain is selected, hpireset uses a session with the default domain. The s
 
 =head1 SEE ALSO
 
-hpialarms, hpiel, hpievents, hpifan, hpiinv, hpionIBMblade, hpipower, hpisensor, hpisettime, hpithres, hpitop, hpitree, hpiwdt
- 
+         hpi_shell
+         hpialarms      hpifan         hpipower       hpitop
+         hpidomain      hpigensimdata  hpisensor      hpitree
+         hpiel          hpiiinv        hpisettime     hpiwdt
+         hpievents      hpionIBMblade  hpithres
+
 
 =head1 AUTHORS
 
