--- a/openhpi/trunk/docs/man/hpisensor.pod.1
+++ b/openhpi/trunk/docs/man/hpisensor.pod.1
@@ -28,7 +28,11 @@ If no domain is selected, hpisensor uses a session with the default domain. The 
 
 =head1 SEE ALSO
 
-hpialarms, hpiel, hpievents, hpifan, hpiinv, hpionIBMblade, hpipower, hpireset, hpisettime, hpithres, hpitop, hpitree, hpiwdt
+         hpi_shell
+         hpialarms      hpifan         hpipower       hpitop
+         hpidomain      hpigensimdata  hpireset       hpitree
+         hpiel          hpiiinv        hpisettime     hpiwdt
+         hpievents      hpionIBMblade  hpithres
  
 
 =head1 AUTHORS
