--- a/openhpi/trunk/docs/man/hpisettime.pod.1
+++ b/openhpi/trunk/docs/man/hpisettime.pod.1
@@ -25,7 +25,12 @@ If no domain is selected, hpisettime uses a session with the default domain. The
 
 =head1 SEE ALSO
 
-hpialarms, hpiel, hpievents, hpifan, hpiinv, hpionIBMblade, hpipower, hpireset, hpisensor, hpithres, hpitop, hpitree, hpiwdt
+         hpi_shell
+         hpialarms      hpifan         hpipower       hpitop
+         hpidomain      hpigensimdata  hpireset       hpitree
+         hpiel          hpiiinv        hpisensor      hpiwdt
+         hpievents      hpionIBMblade  hpithres
+
 
 =head1 AUTHORS
 
