--- a/openhpi/trunk/docs/man/hpitop.pod.1
+++ b/openhpi/trunk/docs/man/hpitop.pod.1
@@ -34,7 +34,12 @@ If no domain is selected, hpitop displays information using a session with the d
 
 =head1 SEE ALSO
  
-hpialarms, hpiel, hpievents, hpifan, hpiinv, hpionIBMblade, hpipower, hpireset, hpisensor, hpisettime, hpithres, hpitree, hpiwdt
+         hpi_shell
+         hpialarms      hpifan         hpipower       hpithres
+         hpidomain      hpigensimdata  hpireset       hpitree
+         hpiel          hpiiinv        hpisensor      hpiwdt
+         hpievents      hpionIBMblade  hpisettime
+
 
 =head1 AUTHORS
 
