Updating usage output and man page for bugfix #2964284

--- a/openhpi/trunk/docs/man/hpifan.pod.1
+++ b/openhpi/trunk/docs/man/hpifan.pod.1
@@ -18,7 +18,8 @@ If no domain is selected, hpifan uses a session to the default domain. The selec
 =over 2
 
  -D <domainid> select domain id
- -s <speed>    set fan speed for ALL fans
+ -s <speed>    set fan speed for ALL fans.
+               <speed> is a number or "auto" for setting fan in auto mode
  -h            help
 
 =back
