Implements Feature Request 3085861: Provide Clients using oHpi functions

--- a/openhpi/trunk/docs/man/hpi_shell.pod.1
+++ b/openhpi/trunk/docs/man/hpi_shell.pod.1
@@ -31,10 +31,12 @@ Once in hpi_shell, use the "help" command for a list of commands, or
 
 =head1 SEE ALSO
 
-  hpi_shell      hpifan         hpipower       hpithres       
-  hpialarms      hpiinv         hpireset       hpitop         
-  hpiel          hpijs          hpisensor      hpitree        
+  hpialarms      hpifan         hpipower       hpithres       
+  hpidomain      hpigensimdata  hpireset       hpitop         
+  hpiel          hpiinv         hpisensor      hpitree        
   hpievents      hpionIBMblade  hpisettime     hpiwdt
+  ohhandler      ohparam
+
 
 =head1 AUTHORS
 
