--- a/openhpi/trunk/docs/man/hpievents.pod.1
+++ b/openhpi/trunk/docs/man/hpievents.pod.1
@@ -55,6 +55,7 @@ SaErrorT SAHPI_API saHpiEventGet (
          hpidomain      hpiinv         hpisensor      hpitree
          hpiel          hpionIBMblade  hpisettime     hpiwdt
          hpifan         hpipower       hpithres
+         ohhandler      ohparam
 
  
 =head1 AUTHORS
