--- a/openhpi/trunk/docs/man/hpiinv.pod.1
+++ b/openhpi/trunk/docs/man/hpiinv.pod.1
@@ -42,6 +42,7 @@ LENGTH_BAD
          hpidomain      hpigensimdata  hpisensor      hpitree
          hpiel          hpionIBMblade  hpisettime     hpiwdt
          hpievents      hpipower       hpithres
+         ohhandler      ohparam
 
 
 =head1 AUTHORS
