--- a/openhpi/trunk/docs/man/hpionIBMblade.pod.1
+++ b/openhpi/trunk/docs/man/hpionIBMblade.pod.1
@@ -55,6 +55,7 @@ Management Controller (BMC)
          hpidomain      hpigensimdata  hpisensor      hpitree
          hpiel          hpiiinv        hpisettime     hpiwdt
          hpievents      hpipower       hpithres
+         ohhandler      ohparam
 
 
 =head1 AUTHORS
