--- a/openhpi/trunk/docs/man/hpipower.pod.1
+++ b/openhpi/trunk/docs/man/hpipower.pod.1
@@ -34,6 +34,7 @@ If no domain is selected, hpievents polls for events in the default domain. The 
          hpidomain      hpigensimdata  hpisensor      hpitree
          hpiel          hpiiinv        hpisettime     hpiwdt
          hpievents      hpionIBMblade  hpithres
+         ohhandler      ohparam
 
 
 =head1 AUTHORS
