--- a/openhpi/trunk/docs/man/hpireset.pod.1
+++ b/openhpi/trunk/docs/man/hpireset.pod.1
@@ -36,6 +36,7 @@ If no domain is selected, hpireset uses a session with the default domain. The s
          hpidomain      hpigensimdata  hpisensor      hpitree
          hpiel          hpiiinv        hpisettime     hpiwdt
          hpievents      hpionIBMblade  hpithres
+         ohhandler      ohparam
 
 
 =head1 AUTHORS
