--- a/openhpi/trunk/docs/man/hpisettime.pod.1
+++ b/openhpi/trunk/docs/man/hpisettime.pod.1
@@ -30,6 +30,7 @@ If no domain is selected, hpisettime uses a session with the default domain. The
          hpidomain      hpigensimdata  hpireset       hpitree
          hpiel          hpiiinv        hpisensor      hpiwdt
          hpievents      hpionIBMblade  hpithres
+         ohhandler      ohparam
 
 
 =head1 AUTHORS
