--- a/openhpi/trunk/docs/man/hpithres.pod.1
+++ b/openhpi/trunk/docs/man/hpithres.pod.1
@@ -28,6 +28,7 @@ If no domain is selected, hpiel uses a session with the default domain. The sele
          hpidomain      hpigensimdata  hpireset       hpitree
          hpiel          hpiiinv        hpisensor      hpiwdt
          hpievents      hpionIBMblade  hpisettime
+         ohhandler      ohparam
 
 
 =head1 AUTHORS
