--- a/openhpi/trunk/docs/man/hpitop.pod.1
+++ b/openhpi/trunk/docs/man/hpitop.pod.1
@@ -39,6 +39,7 @@ If no domain is selected, hpitop displays information using a session with the d
          hpidomain      hpigensimdata  hpireset       hpitree
          hpiel          hpiiinv        hpisensor      hpiwdt
          hpievents      hpionIBMblade  hpisettime
+         ohhandler      ohparam
 
 
 =head1 AUTHORS
