--- a/openhpi/trunk/docs/man/hpialarms.pod.1
+++ b/openhpi/trunk/docs/man/hpialarms.pod.1
@@ -62,6 +62,7 @@ If no domain is selected, hpialarms uses a session with the default domain. The 
          hpiel          hpiinv         hpisensor      hpitree
          hpievents      hpionIBMblade  hpisettime     hpiwdt
          hpifan         hpipower       hpithres
+         ohhandler      ohparam
 
 
 =head1 AUTHORS
