--- a/openhpi/trunk/docs/man/hpiel.pod.1
+++ b/openhpi/trunk/docs/man/hpiel.pod.1
@@ -70,6 +70,7 @@ SaErrorT SAHPI_API saHpiEventLogClear (
          hpidomain      hpiinv         hpisensor      hpitree
          hpievents      hpionIBMblade  hpisettime     hpiwdt
          hpifan         hpipower       hpithres
+         ohhandler      ohparam
 
 
 =head1 AUTHORS
