--- a/openhpi/trunk/docs/man/hpisensor.pod.1
+++ b/openhpi/trunk/docs/man/hpisensor.pod.1
@@ -33,6 +33,7 @@ If no domain is selected, hpisensor uses a session with the default domain. The 
          hpidomain      hpigensimdata  hpireset       hpitree
          hpiel          hpiiinv        hpisettime     hpiwdt
          hpievents      hpionIBMblade  hpithres
+         ohhandler      ohparam
  
 
 =head1 AUTHORS
