--- a/openhpi/trunk/docs/man/hpi_shell.pod.1
+++ b/openhpi/trunk/docs/man/hpi_shell.pod.1
@@ -20,7 +20,7 @@ Once in hpi_shell, use the "help" command for a list of commands, or
 
 =over 2
 
- -c     Use the specified openhpi config file
+ -c     Use the specified openhpi client config file
  -e     Show short events, discover after subscribe
  -f     Read commands from "file" rather than standard input
  -n     Connect to the OpenHPI daemon on "hostname" rather than the
