feature 30225777: support for domain discovery New function oHpiDomainEntryGet and new client ohdomainlist

--- a/openhpi/trunk/docs/man/hpi_shell.pod.1
+++ b/openhpi/trunk/docs/man/hpi_shell.pod.1
@@ -36,7 +36,7 @@ Once in hpi_shell, use the "help" command for a list of commands, or
   hpidomain      hpigensimdata  hpireset       hpitop         
   hpiel          hpiinv         hpisensor      hpitree        
   hpievents      hpionIBMblade  hpisettime     hpiwdt
-  ohhandler      ohparam
+  ohdomainlist   ohhandler      ohparam
 
 
 =head1 AUTHORS
