--- a/openhpi/trunk/docs/man/hpidomain.pod.1
+++ b/openhpi/trunk/docs/man/hpidomain.pod.1
@@ -31,7 +31,7 @@ Option -t allows to change the domain tag.
          hpiel          hpiinv         hpisensor      hpitree
          hpievents      hpionIBMblade  hpisettime     hpiwdt
          hpifan         hpipower       hpithres
-         ohhandler      ohparam
+         ohdomainlist   ohhandler      ohparam
 
 
 
