--- a/openhpi/trunk/docs/man/hpigensimdata.pod.1
+++ b/openhpi/trunk/docs/man/hpigensimdata.pod.1
@@ -33,7 +33,7 @@ If no file name is specified, the data is displayed on console.
          hpidomain      hpiinv         hpisensor      hpitree
          hpiel          hpionIBMblade  hpisettime     hpiwdt
          hpievents      hpipower       hpithres
-         ohhandler      ohparam
+         ohdomainlist   ohhandler      ohparam
 
 
 =head1 AUTHORS
