--- a/openhpi/trunk/docs/man/hpitree.pod.1
+++ b/openhpi/trunk/docs/man/hpitree.pod.1
@@ -41,7 +41,7 @@ If no domain is selected, hpitop displays information using a session with the d
          hpidomain      hpigensimdata  hpireset       hpitop
          hpiel          hpiiinv        hpisensor      hpiwdt
          hpievents      hpionIBMblade  hpisettime
-         ohhandler      ohparam
+         ohdomainlist   ohhandler      ohparam
 
 
 =head1 AUTHORS
