--- a/openhpi/trunk/docs/man/hpiwdt.pod.1
+++ b/openhpi/trunk/docs/man/hpiwdt.pod.1
@@ -33,7 +33,7 @@ If no domain is selected, hpiwdt uses a session with the default domain. The sel
          hpidomain      hpigensimdata  hpireset       hpitop
          hpiel          hpiiinv        hpisensor      hpitree
          hpievents      hpionIBMblade  hpisettime    
-         ohhandler      ohparam
+         ohdomainlist   ohhandler      ohparam
 
 
 =head1 AUTHORS
