--- a/openhpi/trunk/docs/man/ohhandler.pod.1
+++ b/openhpi/trunk/docs/man/ohhandler.pod.1
@@ -52,7 +52,7 @@ If no domain is selected, ohhandler uses the default domain. The selected domain
          hpidomain      hpiinv         hpisensor      hpitree
          hpiel          hpionIBMblade  hpisettime     hpiwdt
          hpievents      hpipower       hpithres
-         ohparam
+         ohdomainlist   ohparam
 
  
 =head1 AUTHORS
