--- a/openhpi/trunk/docs/man/ohparam.pod.1
+++ b/openhpi/trunk/docs/man/ohparam.pod.1
@@ -32,7 +32,7 @@ If no domain is selected, ohparam uses the default domain. The selected domain i
          hpidomain      hpiinv         hpisensor      hpitree
          hpiel          hpionIBMblade  hpisettime     hpiwdt
          hpievents      hpipower       hpithres
-         ohhandler
+         ohdomainlist   ohhandler
 
  
 =head1 AUTHORS
