--- a/openhpi/trunk/README
+++ b/openhpi/trunk/README
@@ -44,6 +44,22 @@ oa_soap plugin
   libxml2
 
 ---------------------------------------------------------
+RPM BUILD NOTE
+---------------------------------------------------------
+The library libuuid.so can be provided with e2fsprogs RPM
+or with libuuid RPM.
+And the header file uuid.h can be provided with
+e2fsprogs-devel RPM or with libuuid-devel RPM
+correspondingly.
+
+The default RPM spec for openhpi is configured for the
+first case libuuid/libuuid-devel.
+
+If your distribution falls into the second case just
+change uuid_provider in openhpi.spec.in before
+running ./configure script.
+
+---------------------------------------------------------
 BUILD / INSTALLATION
 ---------------------------------------------------------
 
