--- a/openhpi/branches/2.15.x/docs/man/openhpi.pod.7
+++ b/openhpi/branches/2.15.x/docs/man/openhpi.pod.7
@@ -8,11 +8,16 @@ OpenHPI is an implementation of the SA Forum's Hardware Platform
 Interface, which provides a standard C library interface to manage,
 monitor, and control hardware (both local and remote).
 
-OpenHPI 2.x implements the HPI B.01.01 specification.
+Starting with release 2.14.0 OpenHPI implements the HPI B.03.02 specification.
 
 The OpenHPI client library (libopenhpi) provides all the connection
 functionality needed by the client application to connect to the OpenHPI
 daemon running on the local or remote server.
+
+The OpenHPI daemon runs as a background process and executes the requests. 
+It loads plugins to adapt to the different hardware types. The plugins can
+be defined in the openhpi.conf file or can be loaded dynamically.
+
 
 =head1 ENVIRONMENTAL VARIABLES
 
@@ -21,33 +26,36 @@ variables.  This documents all client environmental settings.
 
 =over 2
 
+=item B<OPENHPICLIENT_CONF>="filename"
+
+Location for the client's configuration file that specifies the HPI domains
+and addresses of daemons serving the domains. If the variable is not set, 
+OpenHPI will look for a file openhpiclient.conf in the directory specified 
+during the build process (default /etc/openhpi).
+
 =item B<OPENHPI_DAEMON_HOST>=URL
 
 URL for the host running the daemon. This can be "localhost" (default)
-if the daemon is running on the local host or an ip address. 
+if the daemon is running on the local host or an ip address.
+The variable is only used if no default domain is defined via the client conf 
+file.
 
 =item B<OPENHPI_DAEMON_PORT>=PORT_NUMBER
 
 The port number the host is listening on for clent connections.
 Default port is 4743.
+The variable is only used if no default domain is defined via the client conf 
+file.
+
 
 =back
 
 =head1 HARDWARE SUPPORT
 
 OpenHPI provides a number of plugins that talk to different hardware
-types.  The following is a list of tested plugins in OpenHPI 2.x.
+types.  The following is a list of supported plugins.
 
 =over 4
-
-=item B<ipmi>
-
-An IPMI plugin that can talk locally (via smi interface and OpenIPMI
-device driver) or remotely (via IPMI over LAN).  It supports IPMI 1.5
-for standard rackmount servers, and some of IPMI 2.0 for support of
-ATCA chassis.
-
-IPMI plugin depends on libOpenIPMI version 1.4.x.
 
 =item B<ipmidirect>
 
@@ -61,13 +69,53 @@ well as IBM xSeries servers with RSA 1 adapters.
 
 SNMP_BC plugin depends on net-snmp > 5.0.7.
 
+=item B<ilo2_ribcl>
+
+OpenHPI plugin supporting HP ProLiant Rack Mount Servers. This plug-in connects
+to iLO2 on HP ProLiant Rack Mount Server using a SSL connection and exchanges
+information via Remote Insight Board Command Language (RIBCL). 
+
+=item B<oa_soap>
+
+OpenHPI plug-in supporting HP BladeSystems c-Class. This plug-in connects
+to the OA of a c-Class chassis using an SSL connection and manages the system
+using an XML-encoded SOAP interface.
+
+=item B<rtas>
+
+Run-Time Abstraction Services (RTAS) plug-in
+
 =item B<sysfs>
 
-Current status??
+OpenHPI plugin that reads system information from sysfs.
+(LM sensors and I2C devices exported in sysfs requires kernel 2.6 or >= 2.5.72)
 
 =item B<watchdog>
 
-Current status??
+Linux watchdog device interface
+
+=back
+
+The following plugins are provided to ease testing or support complex 
+hardware architectures:
+
+=over 4
+
+=item B<simulator>
+
+OpenHPI plugin that reports fakes hardware used for
+testing the core library.
+
+=item B<dynamic_simulator>
+
+OpenHPI plugin that reports fakes hardware defined in the file
+simulation.data used for testing the core library.
+
+=item B<slave>
+
+OpenHPI plug-in that allows to aggregate resources from different 
+domains (slave domains) and to provide aggregated resources as part 
+of the one domain (master domain).
 
 =back
 
@@ -77,7 +125,7 @@ The definitive guide to HPI is the SA Forum specification at
 http://saforum.org.
 
 More info on OpenHPI can be found at our webpage
-(http://openhpi.org).
+(http://openhpi.org) and in inline documentation.
 
 =head1 SEE ALSO
 
@@ -89,6 +137,15 @@ The following man pages may also be of interest
 
 The openhpi daemon, providing OpenHPI data as a system service.
 
+=item B<OpenHPI client programs>
+
+         hpialarms      hpigensimdata  hpireset       hpitop
+         hpidomain      hpiinv         hpisensor      hpitree
+         hpiel          hpionIBMblade  hpisettime     hpiwdt
+         hpievents      hpipower       hpithres
+         ohdomainlist   ohhandler      ohparam
+         hpi_shell
+
 =back
 
 =head1 AUTHORS
@@ -97,4 +154,6 @@ Authors of this man page:
 
  Sean Dague (http://dague.net/sean)
  Renier Morales (renier@openhpi.org)
+ Ulrich Kleber (ulikleber@users.sourceforge.net)
+
 
