--- a/openhpi/trunk/docs/man/openhpi.pod.7
+++ b/openhpi/trunk/docs/man/openhpi.pod.7
@@ -142,7 +142,7 @@ The openhpi daemon, providing OpenHPI data as a system service.
          hpialarms      hpigensimdata  hpireset       hpitop
          hpidomain      hpiinv         hpisensor      hpitree
          hpiel          hpionIBMblade  hpisettime     hpiwdt
-         hpievents      hpipower       hpithres
+         hpievents      hpipower       hpithres       hpixml
          ohdomainlist   ohhandler      ohparam
          hpi_shell
 
